<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.minimajack.v8.format</groupId>
	<artifactId>com.minimajack.v8.format.bs</artifactId>
	<packaging>jar</packaging>

	<name>com.minimajack.v8.format.bs</name>
	<description>Java libs for reading internal representation v8 classes.</description>
	<inceptionYear>2015</inceptionYear>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <parent>
		<groupId>com.minimajack.v8</groupId>
		<artifactId>com.minimajack.v8.format</artifactId>
		<version>0.0.21</version>
	</parent>

	<dependencies>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.25</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

</project>